short-service/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: demo.test
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: short-app-clusterip
                port:
                  number: 80
          - path: "/api"
            pathType: Prefix
            backend:
              service:
                name: short-api-clusterip
                port:
                  number: 3000
